k8s/deployment/bastion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion
  namespace: bib
  labels:
    app: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bastion
  template:
    metadata:
      labels:
        app: bastion
    spec:
      containers:
        - name: bastion
          image: alpine/socat:latest
          command:
            - sh
            - -c
            - |
              socat TCP-LISTEN:5433,fork,reuseaddr TCP:172.16.20.9:5432 &
              socat TCP-LISTEN:5434,fork,reuseaddr TCP:172.16.20.36:5432 &
              wait
          ports:
            - containerPort: 5433
              name: postgres-evalue
            - containerPort: 5434
              name: postgres-bmt
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
