k8s/deployment/ing_hm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-hm
  namespace: data-engineering
  labels:
    app: ingestion-hm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-hm
  template:
    metadata:
      labels:
        app: ingestion-hm
    spec:
      containers:
        - name: ingestion-hm
          image: rg.fr-par.scw.cloud/data-engineering/hm-ingestion:latest
          imagePullPolicy: Always
          command: ["python", "src/ingestion/high_mobility/__main__.py", "--max_workers", "8"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
