k8s/deployment/ing_hm_mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-hm-mqtt
  namespace: data-engineering
  labels:
    app: ingestion-hm-mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-hm-mqtt
  template:
    metadata:
      labels:
        app: ingestion-hm-mqtt
    spec:
      containers:
        - name: ingestion-hm-mqtt
          image: rg.fr-par.scw.cloud/data-engineering/hm-ingestion:latest
          command: ["python", "-m", "ingestion.high_mobility.hm_mqtt_to_kafka"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: mqtt-certs
              mountPath: /app/certs/hm_mqtt
              readOnly: true
      volumes:
        - name: mqtt-certs
          secret:
            secretName: hm-mqtt-secret
            items:
              - key: ca_crt.pem
                path: ca_crt.pem
              - key: client_crt.pem
                path: client_crt.pem
              - key: client_key.pem
                path: client_key.pem
