k8s/deployment/ing_ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-ms
  namespace: bib
  labels:
    app: ingestion-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-ms
  template:
    metadata:
      labels:
        app: ingestion-ms
    spec:
      containers:
        - name: ingestion-ms
          image: rg.fr-par.scw.cloud/bib-images/ms-ingestion:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
