k8s/deployment/tesla_vehicle_command.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesla-vehicle-command
  namespace: data-engineering
  labels:
    app: tesla-vehicle-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tesla-vehicle-command
  template:
    metadata:
      labels:
        app: tesla-vehicle-command
    spec:
      containers:
        - name: tesla-http-proxy
          image: tesla/vehicle-command:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config-secret
              mountPath: /config-secret
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 100Mi
      volumes:
        - name: config-secret
          secret:
            secretName: tesla-vehicle-command-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tesla-vehicle-command
  namespace: data-engineering
  labels:
    app: tesla-vehicle-command
spec:
  type: ClusterIP
  selector:
    app: tesla-vehicle-command
  ports:
    - name: https
      protocol: TCP
      port: 4443
      targetPort: 4443
