k8s/deployment/ing_api_push.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ing-api-push
  namespace: data-engineering
  labels:
    app: ing-api-push
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ing-api-push
  template:
    metadata:
      labels:
        app: ing-api-push
    spec:
      containers:
        - name: ing-api-push
          image: rg.fr-par.scw.cloud/data-engineering/ingestion-push:latest
          imagePullPolicy: Always
          # 1 worker per pod (breaks metrics otherwise)
          command: ["uvicorn", "src.ingestion.push.main:app", "--host", "0.0.0.0", "--port", "8080", "--workers", "1"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "800m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ing-api-push-service
  namespace: data-engineering
  labels:
    app: ing-api-push
spec:
  type: ClusterIP
  selector:
    app: ing-api-push
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-api-push-ingress
  namespace: data-engineering
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/whitelist-source-range: "35.156.51.248/32,18.159.198.255/32,3.68.135.92/32,82.121.210.218/32"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kia.bib-services.fr
        - bmw.bib-services.fr
        - volkswagen.bib-services.fr
      secretName: ing-api-push-tls
  rules:
    - host: kia.bib-services.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ing-api-push-service
                port:
                  name: http
    - host: bmw.bib-services.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ing-api-push-service
                port:
                  name: http
    - host: volkswagen.bib-services.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ing-api-push-service
                port:
                  name: http
