k8s/deployment/spark_history_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  namespace: spark-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-history-server
  template:
    metadata:
      labels:
        app: spark-history-server
    spec:
      containers:
        - name: spark-history-server
          image: rg.fr-par.scw.cloud/bib-images/spark:1
          args: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.history.HistoryServer"]
          ports:
            - containerPort: 18080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server-service
  namespace: spark-operator
spec:
  type: ClusterIP
  selector:
    app: spark-history-server
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-signin: https://auth.bibers.fr/oauth2/start?rd=$scheme://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.bibers.fr/oauth2/auth
  name: spark-history-server-ingress
  namespace: spark-operator
spec:
  ingressClassName: nginx
  rules:
  - host: spark-history.bibers.fr
    http:
      paths:
      - backend:
          service:
            name: spark-history-server-service
            port:
              number: 18080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - spark-history.bibers.fr
    secretName: spark-history-server-tls
